<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">记账本</string>
    <string name="addrec">添加</string>
    <string name="addcancel">取消</string>
    <string name="pay">支出:</string>
	<string name="income">收入:</string>
	<string name="action">事件:</string>
	<string name="time">时间:</string>
	<string name="type">类型:</string>
	<string name="money">金额:</string>
	<string name="what">都花哪里去了?</string>
	<string name="mmoney">0.00</string>
	<string name="notice">温馨提示</string>
	<string name="addcancel_message">是不是不忍心记录了,花太多怕老婆骂?</string>
	<string name="addcancel_pmessage">你做的对,你还是记录下吧!</string>
	<string name="addcancel_nmessage">你不是个好孩子!</string>
</resources>
